added checkboxes for shopping list

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <tr><th>
     <section id="recipes">
         <h2>Recipe Search</h2>
-        
+
         <!--search bar with filter dropdown-->
         <section id="search-bar">
             <input type="text" id="recipe-search" placeholder="Search for recipes..." oninput="searchRecipes()">
@@ -64,6 +64,7 @@
         <h3>Shopping List</h3>
         <table id="shopping-list-items">
             <tr>
+                <th>Done</th> <!--column for the checkboxes-->
                 <th>Ingredient</th>
             </tr>
 
