--- a/planner.html
+++ b/planner.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header><h3>Nutrition Helper.</h3></header>
-    <header class="header2"><h2><a href="#monday">Monday</a> <a href="#tuesday">Tuesday</a> <a href="#wednesday">Wednesday</a> <a href="#thursday">Thursday</a> <a href="#friday">Friday</a> <a href="#saturday">Saturday</a> <a href="#sunday">Sunday</a> <a href="index.html">Home</a></h2></header>
+    <header class="header2"><h2><a href="#monday">Monday</a> <a href="#tuesday">Tuesday</a> <a href="#wednesday">Wednesday</a> <a href="#thursday">Thursday</a> <a href="#friday">Friday</a> <a href="#saturday">Saturday</a> <a href="#sunday">Sunday</a> <a href="index.html">Home</a><button id="drk-toggle" class="darkbtn">Dark mode</button></h2></header>
     <img class="banner" src="https://t3.ftcdn.net/jpg/01/63/13/30/360_F_163133061_TlMOMqgxAvBuwzLAjxOQ8v1FQ3OexfRG.jpg">
     <br><br>
     <section id="planner">
