Added recipe list to planner page which displays saved recipes and formatted layout, also added back to top button when scrolling

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 
 <footer>Site created and maintained by Navjot, Sophie & Ashton 2024&copy; All Rights Reserved.</footer>    
 
-<script src="script.js"></script>
+<button id="back-to-top" class="back-to-top" title="Go to top">
+    &#8679; <!-- unicode for up arrow -->
+</button>
+<script src="script.js" defer></script>
 </body>
 </html>
