--- a/planner.html
+++ b/planner.html
@@ -14,6 +14,18 @@
          <button id="drk-toggle" class="darkbtn">Dark mode</button></h2></header>
     <img class="banner" src="https://t3.ftcdn.net/jpg/01/63/13/30/360_F_163133061_TlMOMqgxAvBuwzLAjxOQ8v1FQ3OexfRG.jpg">
     <br><br>
+
+    <div class="planner-container">
+        <section id="recipe-list-planner">
+            <h3>Saved Recipes</h3>
+            <table id="planner-recipe-table">
+                <tr>
+                    <th>Recipe Name</th>
+                    <th>Delete</th>
+                </tr>
+            </table>
+        </section>
+
     <section id="planner">
         <h1>Weekly Planner</h1>
         <br>
@@ -37,5 +49,11 @@
 <img class="avocado" src="https://images.squarespace-cdn.com/content/v1/5661b263e4b0830bdc162128/1531234150802-7M3VMHK28W1T2DF5POZN/5901c94f2600001700c47fbc.jpeg">
 <br><br>
 <footer>Site created and maintained by Navjot, Sophie & Ashton 2024&copy; All Rights Reserved.</footer>      
+
+<button id="back-to-top" class="back-to-top" title="Go to top">
+    &#8679; <!-- unicode for up arrow -->
+</button>
+
+<script src="script.js" defer></script>
 </body>
 </html>
