added flexbox to index.html for better mobile optimization

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <br><br>
     </p>
 </div>
+<section class="flexbox-section">
 <table>
 <tr><th>
     <section id="recipes">
+        
         <h2>Recipe Search</h2>
 
         <!--search bar with filter dropdown-->
@@ -81,6 +83,7 @@
     </section>
 </tr></th>
 </table>
+</section>
 <br><br>
 <br><br>
 <img class="avocado" src="https://images.squarespace-cdn.com/content/v1/5661b263e4b0830bdc162128/1531234150802-7M3VMHK28W1T2DF5POZN/5901c94f2600001700c47fbc.jpeg">
