--- a/planner.html
+++ b/planner.html
@@ -28,7 +28,7 @@
         </section>
 
     <section id="planner">
-        <h1>Weekly Planner</h1>
+        <h1 class="planner-h1"><i>Weekly Planner.</i></h1>
         <br>
         <div class="grid-container">
             <div class="monday" id="monday">
@@ -144,12 +144,11 @@
             </div>
         </div>
             </div>
-            <div class="grid-img"><img src="https://static.wixstatic.com/media/e54b46_fa72d6bf2ca8432ea6bd3fc9ee4afee7~mv2.jpg/v1/fill/w_256,h_256,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/e54b46_fa72d6bf2ca8432ea6bd3fc9ee4afee7~mv2.jpg"></div>
-
-        </div>
     </section>
 </section>
-  
+<br><Br>
+    <br>
+    <img class= "carrot" src="https://static.wixstatic.com/media/e54b46_fa72d6bf2ca8432ea6bd3fc9ee4afee7~mv2.jpg/v1/fill/w_256,h_256,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/e54b46_fa72d6bf2ca8432ea6bd3fc9ee4afee7~mv2.jpg">
     <br><br>
     <br><br>
 <footer>Site created and maintained by Navjot, Sophie & Ashton 2024&copy; All Rights Reserved.</footer>      
