--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </p>
 </div>
 <section class="flexbox-section">
+    <div class="flex">
     <section id="recipes">
         
         <h2>Recipe Search</h2>
@@ -59,7 +60,9 @@
             <button id="clear-recipe-list" onclick="clearRecipeList()">Clear Recipe List</button>
         </section>
     </section>
-
+</div>
+<br><br>
+<div class="flex">
     <section id="shopping-list">
         <h3>Shopping List</h3>
         <table id="shopping-list-items">
@@ -77,8 +80,7 @@
     </tr></th>
 </table>
     </section>
-        <br><br>
-
+</div>
 </section>
 <br><br>
 <br><br>
