Fixed issue with back to top button not working on planner.html

--- a/planner.html
+++ b/planner.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js" defer></script>
+    <script src="script.js" defer></script>
     <title>Weekly Planner</title>
 </head>
 <body>
@@ -152,10 +152,7 @@
     <br><br>
     <br><br>
 <footer>Site created and maintained by Navjot, Sophie & Ashton 2024&copy; All Rights Reserved.</footer>      
-
-<button id="back-to-top" class="back-to-top" title="Go to top">
-    &#8679; <!-- unicode for up arrow -->
-</button>
+<button id="back-to-top" class="back-to-top" title="Go to top">&#8679;</button>
 
 </body>
 </html>
