Added clear planner button to weekly planner to delete all recipes saved in the planner

--- a/planner.html
+++ b/planner.html
@@ -30,6 +30,11 @@
     <section id="planner">
         <h1 class="planner-h1"><i>Weekly Planner.</i></h1>
         <br>
+
+        <section id="planner-controls">
+            <button id="clear-planner" class="clear-planner-btn">Clear Planner</button>
+        </section>
+        
         <div class="grid-container">
             <div class="monday" id="monday">
                 <h1>Monday</h1>
